--- a/public/create/stylesets/simple-color.css
+++ b/public/create/stylesets/simple-color.css
@@ -121,7 +121,7 @@ a:hover { color: #0000ff; text-decoration:none; }
 a:active { color: #0000ff; text-decoration:none; }
 
 
-/*Name: Code*/
+/*Name: Code block*/
 .code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -131,7 +131,18 @@ a:active { color: #0000ff; text-decoration:none; }
 	color:#ffffff;
 	background:#000000;
 	margin:1.5em 10% 0em 10%;
-	padding:1em;
+	padding:0 1em;
+}
+
+/*Name: Code*/
+code {
+	font-family: "Source Code Pro", monospace;
+	font-style:normal;
+	font-weight:700;
+	font-size:1em;
+	text-indent:0;
+	color:#ffffff;
+	background:#000000;
 }
 
 
