--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -137,7 +137,7 @@ a:hover { color: #000000; text-decoration:underline; }
 a:active { color: #000000; text-decoration:underline; }
 
 
-/*Name: Code*/
+/*Name: Code block*/
 .code {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
@@ -147,7 +147,18 @@ a:active { color: #000000; text-decoration:underline; }
 	color:#ffffff;
 	background:#000000;
 	margin:1.5em 15% 0em 0em;
-	padding:1em;
+	padding:0 1em;
+}
+
+/*Name: Code*/
+code {
+	font-family: "Courier Prime", Courier, monospace;
+	font-style:normal;
+	font-weight:400;
+	font-size:1em;
+	text-indent:0;
+	color:#ffffff;
+	background:#000000;
 }
 
 
