--- a/public/create/stylesets/light-color.css
+++ b/public/create/stylesets/light-color.css
@@ -154,7 +154,7 @@ a:visited { color: #25768F; text-decoration:underline; }
 a:hover { color: #000000; text-decoration:underline; }
 a:active { color: #000000; text-decoration:none; }
 
-/*Name: Code*/
+/*Name: Code block*/
 .code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -164,7 +164,18 @@ a:active { color: #000000; text-decoration:none; }
 	color:#ffffff;
 	background:#000000;
 	margin:1.5em 30% 0 0%;
-	padding:1em;
+	padding:0 1em;
+}
+
+/*Name: Code*/
+code {
+	font-family: "Source Code Pro", monospace;
+	font-style:normal;
+	font-weight:400;
+	font-size:1em;
+	text-indent:0;
+	color:#ffffff;
+	background:#000000;
 }
 
 /*Name: Caption*/
