--- a/public/create/stylesets/simple-bw.css
+++ b/public/create/stylesets/simple-bw.css
@@ -155,7 +155,7 @@ a:hover { color: #000000; text-decoration:none; }
 a:active { color: #000000; text-decoration:none; }
 
 
-/*Name: Code*/
+/*Name: Code block*/
 .code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -165,9 +165,19 @@ a:active { color: #000000; text-decoration:none; }
 	color:#ffffff;
 	background:#000000;
 	margin:1.5em 10% 0em 10%;
-	padding:1em;
+	padding:0 1em;
 }
 
+/*Name: Code*/
+code {
+	font-family: "Source Code Pro", monospace;
+	font-style:normal;
+	font-weight:700;
+	font-size:1em;
+	text-indent:0;
+	color:#ffffff;
+	background:#000000;
+}
 
 /*Name: Caption*/
 figcaption {
