Made code block into paragraph only: p.code

--- a/public/create/stylesets/book-bw.css
+++ b/public/create/stylesets/book-bw.css
@@ -158,7 +158,7 @@ a:active { color: #000000; text-decoration:underline; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
