--- a/public/create/stylesets/simple-bw.css
+++ b/public/create/stylesets/simple-bw.css
@@ -156,7 +156,7 @@ a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:700;
