--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -138,7 +138,7 @@ a:active { color: #000000; text-decoration:underline; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
 	font-weight:400;
