--- a/public/create/stylesets/future-bw.css
+++ b/public/create/stylesets/future-bw.css
@@ -159,7 +159,7 @@ a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
