--- a/public/create/stylesets/open-bw.css
+++ b/public/create/stylesets/open-bw.css
@@ -156,7 +156,7 @@ a:active { color: #ffffff; text-decoration:underline; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Deja Vu Mono", monospace;
 	font-style:normal;
 	font-weight:400;
