--- a/public/create/stylesets/simple-color.css
+++ b/public/create/stylesets/simple-color.css
@@ -122,7 +122,7 @@ a:active { color: #0000ff; text-decoration:none; }
 
 
 /*Name: Code block*/
-.code {
+p.code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:700;
