--- a/public/create/stylesets/future-bw.css
+++ b/public/create/stylesets/future-bw.css
@@ -159,7 +159,7 @@ a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
@@ -169,6 +169,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 20% 0 20%;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
