--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -138,7 +138,7 @@ a:active { color: #000000; text-decoration:underline; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
 	font-weight:400;
@@ -148,6 +148,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 15% 0em 0em;
 	padding:0 1em;
+	display: block;	
 }
 
 /*Name: Code*/
