--- a/public/create/stylesets/draft-color.css
+++ b/public/create/stylesets/draft-color.css
@@ -138,7 +138,7 @@ a:active { color: #2E2E8A; text-decoration:underline; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Courier Prime", Courier, monospace;
 	font-style:normal;
 	font-weight:400;
@@ -148,6 +148,7 @@ p.code {
 	background:#2E2E8A;
 	margin:1.5em 15% 0em 0em;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
