--- a/public/create/stylesets/extravaganza-bw.css
+++ b/public/create/stylesets/extravaganza-bw.css
@@ -165,7 +165,7 @@ a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
@@ -174,7 +174,8 @@ p.code {
 	color:#ffffff;
 	background:#000000;
 	margin:1.5em 0 0 40%;
-	padding: 0 1em;
+	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
