--- a/public/create/stylesets/extravaganza-color.css
+++ b/public/create/stylesets/extravaganza-color.css
@@ -168,7 +168,7 @@ a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
@@ -178,6 +178,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 0 0 40%;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
