--- a/public/create/stylesets/future-color.css
+++ b/public/create/stylesets/future-color.css
@@ -158,7 +158,7 @@ a:hover { color: #000000; text-decoration:underline; }
 a:active { color: #000000; text-decoration:none; }
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
@@ -168,6 +168,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 20% 0 20%;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
