--- a/public/create/stylesets/open-color.css
+++ b/public/create/stylesets/open-color.css
@@ -156,7 +156,7 @@ a:active { color: #FF0600; text-decoration:none; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Deja Vu Mono", monospace;
 	font-style:normal;
 	font-weight:400;
@@ -166,6 +166,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 15% 0em 15%;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
