--- a/public/create/stylesets/simple-color.css
+++ b/public/create/stylesets/simple-color.css
@@ -122,7 +122,7 @@ a:active { color: #0000ff; text-decoration:none; }
 
 
 /*Name: Code block*/
-p.code {
+code.block {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:700;
@@ -132,6 +132,7 @@ p.code {
 	background:#000000;
 	margin:1.5em 10% 0em 10%;
 	padding:0 1em;
+	display:block;
 }
 
 /*Name: Code*/
