Fixes #261: added "Unarchive" context menu to projects and added styling to archived documents.
Also:
* Enhancement/optimization: when unarchiving documents, only open another document, if the document being archived is the currently displayed archive.
* Fixed bug: open the first UNarchived document when loading the project.
* Fixed bug where archived documents were not returned when a project is opened.
* Fixed bug where GET /project/archived was called: this backend function was removed a while ago. Archived projects are returned along with the unarchived projects.
* Gave the shared utils module a better name.

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -587,3 +587,10 @@ li.typo p {
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.archived {
+    background-color: #CFCFCF;
+}
+.archived a {
+    color: #6B6B6B;
+}
