--- a/public/create/stylesets/draft-bw.css
+++ b/public/create/stylesets/draft-bw.css
@@ -207,14 +207,60 @@ figcaption {
 }
 
 /*Name: Table of content*/
-.toc-item {
+.toc-item-h1 {
 	font-size:1.2em;
 	line-height: 1.47;
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
-
+	text-transform: uppercase;
 }
+
+.toc-item-h2 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 700;
+	color:#000000;
+	text-indent: 1em;
+}
+
+.toc-item-h3 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 2em;
+}
+
+.toc-item-h4 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 4em;
+}
+
+.toc-item-h5 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 5em;
+}
+
+.toc-item-h6 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 6em;
+}
+
 
 /*Name: Colophon*/
 .colophon {
