--- a/public/create/stylesets/future-bw.css
+++ b/public/create/stylesets/future-bw.css
@@ -12,28 +12,6 @@
 800 = heavy
 900 = black*/
 
-/*SOURCE CODE PRO*/
-
-
-
-
-
-
-
-/*ROBOTO*/
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*STYLES*/
 /*Name: Heading 1*/
 h1 {
@@ -228,13 +206,65 @@ figcaption {
 }
 
 /*Name: Table of content*/
-.toc-item {
+.toc-item-h1 {
+	font-family: "Source Code Pro", monospace;
 	font-size:1.2em;
 	line-height: 1.47;
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
 }
+
+.toc-item-h2 {
+	font-family: "Source Code Pro", monospace;
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 700;
+	color:#848482;
+	text-indent: 1em;
+}
+
+.toc-item-h3 {
+	font-family: "Source Code Pro", monospace;
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#848482;
+	text-indent: 2em;
+}
+
+.toc-item-h4 {
+	font-family: "Source Code Pro", monospace;
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#848482;
+	text-indent: 4em;
+}
+
+.toc-item-h5 {
+	font-family: "Source Code Pro", monospace;
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#848482;
+	text-indent: 5em;
+}
+
+.toc-item-h6 {
+	font-family: "Source Code Pro", monospace;
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#848482;
+	text-indent: 6em;
+}
+
 
 /*Name: Colophon*/
 .colophon {
