--- a/public/create/stylesets/light-color.css
+++ b/public/create/stylesets/light-color.css
@@ -12,29 +12,6 @@
 800 = heavy
 900 = black*/
 
-/*SOURCE CODE PRO*/
-
-
-
-
-
-
-
-/*QUICKSAND*/
-
-
-
-
-
-
-
-
-/*RAMBLA*/
-
-
-
-
-
 /*STYLES*/
 /*Name: Heading 1*/
 h1 {
@@ -224,13 +201,59 @@ figcaption {
 }
 
 /*Name: Table of content*/
-.toc-item {
-	font-size:1.1em;
-	line-height: 1.50;
+.toc-item-h1 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 700;
+	color:#25768F;
+}
+
+.toc-item-h2 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 700;
+	color:#25768F;
+	text-indent: 1em;
+}
+
+.toc-item-h3 {
+	font-size:1.2em;
+	line-height: 1.47;
 	font-style:normal;
 	font-weight: 400;
 	color:#25768F;
+	text-indent: 2em;
 }
+
+.toc-item-h4 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#25768F;
+	text-indent: 4em;
+}
+
+.toc-item-h5 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#25768F;
+	text-indent: 5em;
+}
+
+.toc-item-h6 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#25768F;
+	text-indent: 6em;
+}
+
 
 /*Name: Colophon*/
 .colophon {
