--- a/public/create/stylesets/open-bw.css
+++ b/public/create/stylesets/open-bw.css
@@ -12,24 +12,6 @@
 800 = heavy
 900 = black*/
 
-/*OPEN SANS*/
-
-
-
-
-
-
-
-
-
-
-
-/*DEJA-VU SANS MONO*/
-
-
-
-
-
 /*STYLES*/
 /*Name: Heading 1*/
 h1 {
@@ -226,13 +208,65 @@ figcaption {
 }
 
 /*Name: Table of content*/
-.toc-item {
-	font-size:1.1em;
-	line-height: 1.50;
+.toc-item-h1 {
+	font-size:1.2em;
+	line-height: 1.47;
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
+	text-transform: uppercase;
 }
+
+.toc-item-h2 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 700;
+	color:#000000;
+	text-indent: 1em;
+	text-transform: uppercase;
+}
+
+.toc-item-h3 {
+	font-size:1.2em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 2em;
+	text-transform: uppercase;
+}
+
+.toc-item-h4 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 4em;
+	text-transform: uppercase;
+}
+
+.toc-item-h5 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 5em;
+	text-transform: uppercase;
+}
+
+.toc-item-h6 {
+	font-size:1em;
+	line-height: 1.47;
+	font-style:normal;
+	font-weight: 400;
+	color:#000000;
+	text-indent: 6em;
+	text-transform: uppercase;
+}
+
 
 /*Name: Colophon*/
 .colophon {
