--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -517,7 +517,7 @@ li.typo p {
 	width: 100%;
 	padding: 0;
 }
-.left-menu-box.inputfield input {
+.left-menu-box.inputfield input, .left-menu-box.inputfield select {
 	background: none white;
 	width: 100%;
 	height: 28px;
