--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -510,6 +510,14 @@ li.typo p:first-child {
 .left-menu-parameter-margin {
 	margin-top: 10px;
 }
+
+.left-menu-box.label {
+	position: relative;
+	display: block;
+	border: 0;
+	padding: 5px 0;
+}
+
 .left-menu-box.inputfield {
 	position: relative;
 	width: calc(100% - 36px);
@@ -526,6 +534,12 @@ li.typo p:first-child {
 	height: 28px;
 	padding: 5px 10px;
 }
+.left-menu-box.inputfield textarea {
+	background: none white;
+	width: 100%;
+	height: 60px;
+	padding: 5px 10px;
+}
 .left-menu-box.inputfield input.show-info {
 	padding-right: 30px;
 	text-align: right;
@@ -536,7 +550,7 @@ li.typo p:first-child {
 	right: 10px;
 	color: #ccc;
 }
-.left-menu-box.inputfield input:focus {
+.left-menu-box.inputfield input:focus, .left-menu-box.inputfield textarea:focus {
 	outline:none;
 }
 .left-menu-box .option {
@@ -574,6 +588,18 @@ li.typo p:first-child {
 	display: block;
 	position: relative;
 	margin: -1px 10px 10px 0;
+	padding: 16px;
+	width: 238px;
+	height: auto;
+	background: none #fefefe;
+	float: left;
+	border: 1px solid #ffff99;
+	box-shadow: 0px 5px 5px -5px #ccc;
+}
+.outputOptionProperties {
+	display: block;
+	position: relative;
+	margin: 0px 10px 10px 0;
 	padding: 16px;
 	width: 238px;
 	height: auto;
