Implemented breadcrumb, Projectspace link, etc.

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -164,7 +164,10 @@
 }
 
 .container {
-	padding: 20px;
+	padding-top: 0px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .editor {
