--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -499,7 +499,7 @@ li.typo p {
 	text-align: center;
 	cursor: pointer;
 }
-.left-menu-box {
+.left-menu-box, .right-menu-box {
 	display: inline-block;
 	width: 100%;
 	padding: 5px 10px;
