remove border, use underline

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -49,8 +49,7 @@ a {
 
 a.breadcrumb {
 	color: #666;
-	text-decoration: none;
-	border-bottom: 1px solid #666;
+	text-decoration: underline;
 }
 
 p.breadcrumb {
