--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -218,11 +218,10 @@
 	overflow: hidden;
 }
 [selected] {
-	background-color: #d3d3d3 !important;
+	background-color: #eee !important;
 }
 [selected] a, [selected] span, [selected] ul, [selected] .style-copy-options li {
-	background-color: #d3d3d3 !important;
-	/* color: #fff265 !important; */
+	background-color: #eee !important;
 }
 
 
