Added body.cover css

--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -116,6 +116,10 @@ figure {
 	page-break-inside:avoid;
 }
 
+body.cover {
+	margin:0;
+}
+
 /*PARAGRAPH RULES*/
 
 /*This makes first line indents on paragraphs that follows paragraphs. And removes the margin-top.*/
